- add socket io events - downgrade socket version - remove redis - merge schema room and chat - local auth

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -1,9 +1,6 @@
 {
 	"db": "mongodb://<username>:<password>@mongodb.net/<dbname>",
-	"sessionSecret": "<RandomString>",
-	"redis": {
-		"host": "127.0.0.1",
-		"port": 6379,
-		"password": ""
-	}
+	"sessionSecret": "secret",
+	"accountUsername": "Ilhamsyahids",
+	"accountPassword": "secret"
 }
