--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "redis": "^3.0.2",
-    "socket.io": "^3.0.4",
-    "socket.io-redis": "^6.0.1"
+    "socket.io": "^2.0.3"
   }
 }
